--- a/init.org
+++ b/init.org
@@ -961,7 +961,10 @@ The defaults are cycled in minibuffer with up/down arrows.
 ** Navigation
 *** General
 #+begin_src elisp :tangle ~/.emacs.d/elisp/org-mode.tangled.el
-(define-key org-mode-map (kbd "C-c C-j") 'counsel-org-goto)
+(bind-key* (kbd "<f8>") 'counsel-org-goto)
+
+;; deeply nested headings with prefixes don't fit in 1 line
+(setq-mark-as-customized 'ivy-truncate-lines nil)
 #+end_src
 
 *** Single-letter hotkeys
