--- a/init.org
+++ b/init.org
@@ -469,8 +469,9 @@ instead of setq, to avoid confusion in Customize interface"
     (display-buffer-use-least-recent-window)
     (inhibit-switch-frame . t))
 
-   ;; open cider-error in the same window, to keep the relevant code open
-   ("\\*cider-error\\*"
+   ((or . ((major-mode . help-mode)
+	   (major-mode . Custom-mode)
+	   "\\*cider-error.*\\*"))
     (display-buffer-same-window)
     (inhibit-same-window . nil)
     (inhibit-switch-frame . t))
