--- a/init.org
+++ b/init.org
@@ -455,28 +455,7 @@ instead of setq, to avoid confusion in Customize interface"
  'dired-kill-when-opening-new-dired-buffer t
 
  'display-buffer-alist
- '(
-   ;; treemacs is a file navigator, typically glued to the left screen side
-   ("\\*Treemacs-.*?" (display-buffer-in-direction) (direction . left))
-
-   ;; Org Src buffers should pop up in the same window
-   ("\\*Org Src.*\\*"
-    (display-buffer-same-window
-     display-buffer-use-least-recent-window))
-
-   ;; open cider-test-report in another window, to keep the relevant tests open
-   ("\\*cider-test-report\\*"
-    (display-buffer-use-least-recent-window)
-    (inhibit-switch-frame . t))
-
-   ((or . ((major-mode . help-mode)
-	   (major-mode . Custom-mode)
-	   "\\*cider-error.*\\*"))
-    (display-buffer-same-window)
-    (inhibit-same-window . nil)
-    (inhibit-switch-frame . t))
-
-   ;; without this, transient buffer breaks window layout
+ '(;; without this, transient buffer breaks window layout
    ;; it happens because of conflicts with lower settings
    (".*transient.*"
     (display-buffer-in-side-window)
@@ -484,45 +463,27 @@ instead of setq, to avoid confusion in Customize interface"
     (inhibit-same-window . t)
     (window-parameters (no-other-window . t)))
 
-   ;; open ivy-occur buffer in another window
-   ((major-mode . ivy-occur-grep-mode)
+   ;; treemacs is a file navigator, typically glued to the left screen side
+   ("\\*Treemacs-.*?" (display-buffer-in-direction) (direction . left))
+
+   ;; open in the same window
+   ((or . ((major-mode . help-mode)
+	   (major-mode . Custom-mode)
+	   (major-mode . dired-mode)
+	   (major-mode . org-mode)
+	   (major-mode . clojure-mode)
+	   (major-mode . cider-repl-mode)
+	   "\\*cider-error.*\\*"
+	   "\\*Org Src.*\\*"))
+    (display-buffer-same-window)
+    (inhibit-same-window . nil)
+    (inhibit-switch-frame . t))
+
+   ;; open in another window - the default behavior
+   ((or . ((major-mode . ivy-occur-grep-mode)
+	   "\\*cider-test-report\\*"
+	   ".*"))
     (display-buffer-use-least-recent-window)
-    (inhibit-same-window . t)
-    (inhibit-switch-frame . t))
-
-   ((major-mode . dired-mode)
-    (display-buffer-same-window
-     display-buffer-reuse-window
-     display-buffer-use-least-recent-window)
-    (inhibit-same-window . nil))
-
-   ;; do not switch windows in org-mode, e. g. for org-mark-ring-goto
-   ((major-mode . org-mode)
-    (display-buffer-same-window
-     display-buffer-reuse-window
-     display-buffer-use-least-recent-window)
-    (inhibit-same-window . nil))
-
-   ;; do not switch windows when opening source-files
-   ((major-mode . clojure-mode)
-    (display-buffer-same-window
-     display-buffer-reuse-window
-     display-buffer-use-least-recent-window)
-    (inhibit-same-window . nil))
-
-   ;; open Cider REPL in the same window and frame
-   ((major-mode . cider-repl-mode)
-    (display-buffer-same-window
-     display-buffer-reuse-window
-     display-buffer-use-least-recent-window)
-    (inhibit-same-window . nil)
-    (inhibit-switch-frame . t))
-
-   ;; prevent all other buffers using current window and switching frames
-   (".*"
-    (display-buffer-use-least-recent-window
-     display-buffer-some-window)
-    (inhibit-same-window . nil)
     (inhibit-switch-frame . t))
    )
  )
