--- a/init.org
+++ b/init.org
@@ -15,7 +15,7 @@ This config aims to maximize Clojure programmer productivity through:
 
 3. /Being minimalistic/
    I use Emacs as a tool, not a hobby. I customize things to get them out of
-   the way of reaching meditative concentration, not to enjoy shiny toys.
+   the way of reaching deep concentration, not to enjoy shiny toys.
 
 4. /<<<Literate programming>>> with <<<polymode>>>/
    To minimize context/abstraction switching overhead. Plus, figuring out
