--- a/init.org
+++ b/init.org
@@ -989,8 +989,7 @@ The defaults are cycled in minibuffer with up/down arrows.
   (setq-mark-as-customized
    'org-startup-folded nil
  ;; not sure how/why this variable was set, decided not to mess with it
- 'org-modules '(ol-bbdb ol-bibtex ol-docview ol-doi ol-eww ol-gnus
-  			ol-info ol-irc ol-mhe ol-rmail org-tempo ol-w3m))
+ org-modules '(ol-docview ol-doi ol-info org-tempo))
 #+end_src
 
 ** Display
@@ -1016,12 +1015,8 @@ The defaults are cycled in minibuffer with up/down arrows.
  ;; do not display inline images when doing org-cycle
  'org-cycle-inline-images-display nil
 
- 'org-link-frame-setup '((vm . vm-visit-folder-other-frame)
-			 (vm-imap . vm-visit-imap-folder-other-frame)
-			 (gnus . org-gnus-no-new-news)
-			 ;; open file links in another frame
-			 (file . find-file-other-frame)
-			 (wl . wl-other-frame)))
+ org-link-frame-setup '(;; open file links in another frame
+			(file . find-file-other-frame)))
 #+end_src
 
 *** Heading subtree fold state cycling
